--- a/src/cssfiles/resultstyle.css
+++ b/src/cssfiles/resultstyle.css
@@ -3,6 +3,11 @@
     height: 100%;
 }
 
+.result_bg button {
+    margin: 20px;
+    width: 250px;
+}
+
 .result_bg {
     width: 100%;
     height: 100%;
@@ -13,7 +18,24 @@
     align-items: center;
 }
 
-.result_container h1 {
+.result_view {
+    display: grid;
+    grid-template-columns: repeat( auto-fit, minmax(300px, 1fr));
+    align-items: center;
+    justify-content: center;
+}
+
+.result_image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.result_info>h1 {
     text-align: center;
-    margin-left: 40%;
+}
+
+.result_info>p {
+    text-align: justify;
+    padding: 0 60px;
 }
